Sección de HTML terminada

--- a/HTML/Formulario.html
+++ b/HTML/Formulario.html
@@ -10,7 +10,7 @@
     <h1>Formulario</h1>
     <form action="">
         <label for="Número">Número:</label>
-        <input type="number" name="numero" id="numero" placeholder="Ingreso número">
+        <input type="number" name="numero" id="numero" placeholder="Ingreso número" autofocus>
         <br><br>
         <label for="Nombre">Nombre:</label>
         <input type="text" name="nombre" id="nombre">
