--- a/S5 - PROYECTO BLOG/index.html
+++ b/S5 - PROYECTO BLOG/index.html
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" href="Blog-personal/css/main.css">
     <link rel="stylesheet" href="Blog-personal/css/all.min.css">
+    <link rel="stylesheet" href="Blog-personal/css/media-query.css">
 </head>
 <body class="home-body">
     <header class="header">
