--- a/S5 - PROYECTO BLOG/blogs.html
+++ b/S5 - PROYECTO BLOG/blogs.html
@@ -7,6 +7,7 @@
     <title>Blog Personal</title>
     <link rel="stylesheet" href="Blog-personal/css/main.css" />
     <link rel="stylesheet" href="Blog-personal/css/all.min.css" />
+    <link rel="stylesheet" href="Blog-personal/css/media-query.css">
   </head>
   <body>
     <header class="header">
